--- a/http/ks.cfg
+++ b/http/ks.cfg
@@ -1,29 +1,64 @@
-#version=RHEL7
-unsupported_hardware
-eula --agreed
+# RHEL7 Kickstart file
+
 # Install OS instead of upgrade
 install
 
 # Install from a cdrom (iso)
 cdrom
 
-# Perform the kickstart installation in text mode
+# Agree to EULA
+eula --agreed
+
+# System language
+lang en_US.UTF-8
+
+# System keyboard
+keyboard us
+
+# System timezone
+timezone UTC
+
+# Perform the kickstart installation in text
 text
 
 # If present, X is not configured on the installed system
 skipx
 
-# System keyboard
-keyboard us
-
-# System language
-lang en_US.UTF-8
+# Supress "Unsupported Hardware Detected" error
+unsupported_hardware
 
 # Setup network interfaces via DHCP
-network --device=eth0 --bootproto=dhcp --onboot=yes
+network --bootproto=dhcp
 
 # Set root pw here (required by KS), remove pw in post
 rootpw vagrant
+
+# Firewall switch
+firewall --disabled
+
+# SELinux switch
+selinux --permissive
+
+# System bootloader configuration
+bootloader --location=mbr
+
+# Clear the Master Boot Record
+zerombr
+
+# Partition clearing information
+clearpart --all --initlabel
+
+# Automatically create partitions, no LVM
+autopart --nolvm
+
+# Set up the authentication options for the system
+auth --enableshadow --passalgo=sha512 --kickstart
+
+# The Setup Agent is not started the first time the system boots
+firstboot --disabled
+
+# Services
+services --enabled=ntpd,ntpdate,NetworkManager,sshd
 
 # Setup Vagrant specifics
 user --name=vagrant --plaintext --password vagrant --groups=vagrant,wheel
@@ -31,138 +66,29 @@ user --name=vagrant --plaintext --password vagrant --groups=vagrant,wheel
 # Completion method
 reboot
 
-# Firewall
-firewall --enabled --service=ssh
-
-# Set up the authentication options for the system
-authconfig --enableshadow --passalgo=sha512 --kickstart
-
-# The Setup Agent is not started the first time the system boots
-firstboot --disabled
-
-# SELinux configuration
-selinux --enforcing
-
-# Services
-services --enabled=ntpd,ntpdate,NetworkManager,sshd
-
-# Installation logging level
-logging --level=debug
-
-# System timezone
-timezone  Etc/UTC
-
-# System bootloader configuration
-bootloader --location=mbr --driveorder=vda --append="tsc=reliable divider=10 plymouth.enable=0 console=ttyS0"
-
-# Clear the Master Boot Record
-zerombr
-
-# Automatically create partitions, no LVM
-autopart --nolvm
-
-# Partition clearing information
-clearpart --all --initlabel
-
+# Package sets and single package
 %packages --ignoremissing --excludedocs
 @Base
 @Core
 @Development Tools
-openssh-clients
-sudo
-openssl-devel
-readline-devel
-zlib-devel
-kernel-headers
-kernel-devel
-net-tools
-vim
-wget
-curl
-rsync
-
-# Unnecessary firmware
--aic94xx-firmware
--atmel-firmware
--b43-openfwwf
--bfa-firmware
--ipw2100-firmware
--ipw2200-firmware
--ivtv-firmware
--iwl100-firmware
--iwl1000-firmware
--iwl3945-firmware
--iwl4965-firmware
--iwl5000-firmware
--iwl5150-firmware
--iwl6000-firmware
--iwl6000g2a-firmware
--iwl6050-firmware
--libertas-usb8388-firmware
--ql2100-firmware
--ql2200-firmware
--ql23xx-firmware
--ql2400-firmware
--ql2500-firmware
--rt61pci-firmware
--rt73usb-firmware
--xorg-x11-drv-ati-firmware
--zd1211-firmware
 
 %end
 
-%post --nochroot --log=/mnt/sysimage/var/log/ks.post01.log
-#!/bin/bash
-
-# Make sure we have the latest packages
+%post
+# Do a full update
 echo "Updating packages"
-/usr/bin/yum clean all
-/usr/bin/yum update -y
+yum update -y
+
+# Update root certs
+wget -O/etc/pki/tls/certs/ca-bundle.crt http://curl.haxx.se/ca/cacert.pem
+
+# Add the vagrant user to sudoers
+echo "vagrant        ALL=(ALL)       NOPASSWD: ALL" >> /etc/sudoers.d/vagrant
+sed -i "s/^.*requiretty/#Defaults requiretty/" /etc/sudoers
 
 # Clean up all yum caches
 echo "Cleaning up yum caches"
 /usr/bin/yum clean all
-
-# Clean up network devices
-echo "Cleaning up network devices"
-/bin/rm -f /etc/udev/rules.d/70-persistent-net.rules
-/bin/find /etc/sysconfig/network-scripts -name "ifcfg-eth*" -exec rm -f '{}' +
-/bin/find /var/lib/dhclient -type f -exec rm -f '{}' +
-
-# Remove hostname
-echo "Clearing out /etc/hostname"
-cat /dev/null > /etc/hostname
-
-# Tune Linux vm.dirty_background_bytes (IMAGE-439)
-# The following tuning causes dirty data to begin to be background flushed at
-# 100 Mbytes, so that it writes earlier and more often to avoid a large build
-# up and improving overall throughput.
-echo "Setting vm.dirty_background_bytes"
-echo "vm.dirty_background_bytes=100000000" >> /etc/sysctl.conf
-
-# Disable Avahi
-echo "Disabling Avahi"
-systemctl disable avahi-daemon.service
-
-# Disable kdump
-echo "Disabling kdump"
-systemctl disable kdump.service
-
-# Ensure we have sane and consistent defaults for ntp.conf
-sed s/restrict\ default\ nomodify\ notrap\ nopeer\ noquery/restrict\ default\ kod\ nomodify\ notrap\ nopeer\ noquery/ -i /etc/ntp.conf
-# For IPv6
-echo "restrict -6 default kod nomodify notrap nopeer noquery" >> /etc/ntp.conf
-sed s/restrict\ ::1/restrict\ -6\ ::1/ -i /etc/ntp.conf
-
-# update root certs
-wget -O/etc/pki/tls/certs/ca-bundle.crt http://curl.haxx.se/ca/cacert.pem
-
-# sudo
-yum install -y sudo
-echo "vagrant        ALL=(ALL)       NOPASSWD: ALL" >> /etc/sudoers.d/vagrant
-sed -i "s/^.*requiretty/#Defaults requiretty/" /etc/sudoers
-
-yum clean all
 
 echo "End of Kickstart"
 
