--- a/http/ks.cfg
+++ b/http/ks.cfg
@@ -1,4 +1,4 @@
-# RHEL7 Kickstart file
+# RHEL7 / CentOS-7 Kickstart file
 
 # Install OS instead of upgrade
 install
@@ -24,9 +24,6 @@ text
 # If present, X is not configured on the installed system
 skipx
 
-# Supress "Unsupported Hardware Detected" error
-unsupported_hardware
-
 # Setup network interfaces via DHCP
 network --bootproto=dhcp
 
@@ -49,10 +46,10 @@ zerombr
 clearpart --all --initlabel
 
 # Automatically create partitions, no LVM
-autopart --nolvm
+autopart --type=btrfs
 
 # Set up the authentication options for the system
-auth --enableshadow --passalgo=sha512 --kickstart
+auth --enableshadow --passalgo=sha512
 
 # The Setup Agent is not started the first time the system boots
 firstboot --disabled
@@ -80,15 +77,11 @@ echo "Updating packages"
 yum update -y
 
 # Update root certs
-wget -O/etc/pki/tls/certs/ca-bundle.crt http://curl.haxx.se/ca/cacert.pem
+curl -o /etc/pki/tls/certs/ca-bundle.crt http://curl.haxx.se/ca/cacert.pem
 
 # Add the vagrant user to sudoers
 echo "vagrant        ALL=(ALL)       NOPASSWD: ALL" >> /etc/sudoers.d/vagrant
 sed -i "s/^.*requiretty/#Defaults requiretty/" /etc/sudoers
-
-# Clean up all yum caches
-echo "Cleaning up yum caches"
-/usr/bin/yum clean all
 
 echo "End of Kickstart"
 
