--- a/ansible/roles/packer-rhel/tasks/main.yml
+++ b/ansible/roles/packer-rhel/tasks/main.yml
@@ -78,12 +78,9 @@
     mode: 0700
 
 - name: Get Vagrant's public key.
-  get_url:
-    url: https://github.com/mitchellh/vagrant/raw/master/keys/vagrant.pub
-    dest: /home/vagrant/.ssh/authorized_keys
-    owner: vagrant
-    group: vagrant
-    mode: 0600
+  authorized_key:
+    user: vagrant
+    key: https://raw.githubusercontent.com/mitchellh/vagrant/master/keys/vagrant.pub
 
 # VirtualBox tools installation.
 - name: Check if VirtualBox is running the guest VM.
