Running Ansible from OSX Laptop now instead of installing it in the VM

--- a/http/ks.cfg
+++ b/http/ks.cfg
@@ -37,7 +37,7 @@ firewall --disabled
 selinux --permissive
 
 # System bootloader configuration
-bootloader --location=mbr
+bootloader --location=mbr --timeout=2
 
 # Clear the Master Boot Record
 zerombr
@@ -46,7 +46,7 @@ zerombr
 clearpart --all --initlabel
 
 # Automatically create partitions, no LVM
-autopart --type=btrfs
+autopart --type=plain
 
 # Set up the authentication options for the system
 auth --enableshadow --passalgo=sha512
