--- a/ansible/roles/packer-rhel/tasks/main.yml
+++ b/ansible/roles/packer-rhel/tasks/main.yml
@@ -69,24 +69,18 @@
     - { regexp: '^GSSAPIAuthentication', line: 'GSSAPIAuthentication no' }
 
 # Vagrant SSH configuration.
-- name: Configure Vagrant .ssh directory.
-  file:
-    path: /home/vagrant/.ssh
-    state: directory
-    owner: vagrant
-    group: vagrant
-    mode: 0700
-
-- name: Get Vagrant's public key.
+- name: Get Vagrants public key.
   authorized_key:
     user: vagrant
     key: https://raw.githubusercontent.com/mitchellh/vagrant/master/keys/vagrant.pub
+    validate_certs: no
 
 # VirtualBox tools installation.
 - name: Check if VirtualBox is running the guest VM.
   stat: path=/home/vagrant/.vbox_version
   register: virtualbox_check
 
+# Install GuestAdditions
 - include: virtualbox.yml
   when: virtualbox_check.stat.exists
 
