fixed some stuff including yum bugs

--- a/http/ks.cfg
+++ b/http/ks.cfg
@@ -63,21 +63,17 @@ user --name=vagrant --plaintext --password vagrant --groups=vagrant,wheel
 # Completion method
 reboot
 
-# Package sets and single package
-%packages --ignoremissing --excludedocs
-@Base
-@Core
-@Development Tools
+# Define package groups and single packages (@Base and @Core are defaults)
+%packages --excludedocs
+-iwl*firmware
 
 %end
 
 %post
+
 # Do a full update
 echo "Updating packages"
 yum update -y
-
-# Update root certs
-curl -o /etc/pki/tls/certs/ca-bundle.crt http://curl.haxx.se/ca/cacert.pem
 
 # Add the vagrant user to sudoers
 echo "vagrant        ALL=(ALL)       NOPASSWD: ALL" >> /etc/sudoers.d/vagrant
