--- a/ansible/roles/packer-rhel/tasks/main.yml
+++ b/ansible/roles/packer-rhel/tasks/main.yml
@@ -1,5 +1,39 @@
 ---
+# Fixes
+- name: Fix slow DNS (adapted from Bento).
+  lineinfile:
+    dest: /etc/sysconfig/network
+    regexp: '^RES_OPTIONS'
+    line: 'RES_OPTIONS="single-request-reopen"'
+    state: present
 
+- name: Fixing ifcfg-lo errors network loopback
+  command: echo "NM_CONTROLLED=no" >>/etc/sysconfig/network-scripts/ifcfg-lo
+
+- name: Fix yum SSL errors
+  command: yum -y reinstall ca-certificates openssl
+
+- name: Remove RedHat interface persistence.
+  lineinfile:
+    dest: /etc/sysconfig/network-scripts/ifcfg-eth0
+    regexp: "{{ item }}"
+    state: absent
+  with_items:
+    - '^HWADDR'
+    - '^UUID'
+
+- name: System tuning
+  shell: echo "vm.dirty_background_bytes=100000000" >> /etc/sysctl.conf
+
+- name: Disable unnecessary services
+  service: name="{{ item }}" state=stopped enabled=no
+  with_items:
+    - kdump
+
+- name: Restart network service (explicitly).
+  service: name=network state=restarted
+
+# Packages
 - name: Get the current kernel release.
   command: uname -r
   changed_when: false
@@ -12,12 +46,12 @@
     - cpp
     - curl
     - gcc
-    - kernel-devel
     - "kernel-devel-{{ kernel_release.stdout }}"
     - kernel-headers
     - libselinux-python
     - make
     - net-tools
+    - NetworkManager
     - ntp
     - openssh-clients
     - openssl-devel
@@ -29,6 +63,36 @@
     - yum-utils
     - zlib-devel
 
+# VirtualBox tools installation.
+- name: Check if VirtualBox is running the guest VM.
+  stat: path=/home/vagrant/.vbox_version
+  register: virtualbox_check
+
+# Install GuestAdditions
+- include: virtualbox.yml
+  when: virtualbox_check.stat.exists
+
+# Cleanup tasks.
+- name: Remove unneeded packages.
+  yum: "name={{ item }} state=absent"
+  with_items:
+    - "alsa-*"
+    - "iwl*firmware"
+    - "b43-openfwwf"
+    - "plymouth*"
+
+- name: Remove surplus kernels
+  command: package-cleanup -y --oldkernels --count=1
+
+- name: Clean up yum.
+  command: yum clean all
+
+- name: Remove files
+  file: name="{{ item }}" state=absent
+  with_items:
+    - /etc/udev/rules.d/70-persistent-net.rules
+
+# Setup time
 - name: Set timezone
   timezone:
     name: "{{ timezone }}"
@@ -41,21 +105,6 @@
     name: ntpd
     state: started
     enabled: yes
-
-# Fix slow DNS.
-- name: Fix slow DNS (adapted from Bento).
-  lineinfile:
-    dest: /etc/sysconfig/network
-    regexp: '^RES_OPTIONS'
-    line: 'RES_OPTIONS="single-request-reopen"'
-    state: present
-
-# Fix ifcfg-lo errors
-- name: Bug fixing network loopback
-  command: echo "NM_CONTROLLED=no" >>/etc/sysconfig/network-scripts/ifcfg-lo
-
-- name: Restart network service (explicitly).
-  service: name=network state=restarted
 
 # SSH daemon configuration.
 - name: Configure SSH daemon.
@@ -74,58 +123,3 @@
     user: vagrant
     key: https://raw.githubusercontent.com/mitchellh/vagrant/master/keys/vagrant.pub
     validate_certs: no
-
-# VirtualBox tools installation.
-- name: Check if VirtualBox is running the guest VM.
-  stat: path=/home/vagrant/.vbox_version
-  register: virtualbox_check
-
-# Install GuestAdditions
-- include: virtualbox.yml
-  when: virtualbox_check.stat.exists
-
-# Cleanup tasks.
-- name: Remove unneeded packages.
-  yum: "name={{ item }} state=absent"
-  with_items:
-    - "alsa-*"
-    - "*firmware*"
-    - "b43-openfwwf"
-    - "wpa_supplicant"
-    - "plymouth*"
-    - "perl*"
-
-- name: Remove surplus kernels
-  command: package-cleanup -y --oldkernels --count=1
-
-- name: Clean up yum.
-  command: yum clean all
-
-- name: Remove files
-  file: name="{{ item }}" state=absent
-  with_items:
-    - /etc/udev/rules.d/70-persistent-net.rules
-    - VBoxGuestAdditions_*.iso
-    - VBoxGuestAdditions_*.iso.?
-
-- name: Clean yum caches
-  file:
-    state: absent
-    path: "/var/cache/yum/x86_64/"
-
-- name: Remove RedHat interface persistence.
-  lineinfile:
-    dest: /etc/sysconfig/network-scripts/ifcfg-eth0
-    regexp: "{{ item }}"
-    state: absent
-  with_items:
-    - '^HWADDR'
-    - '^UUID'
-
-- name: System tuning
-  shell: echo "vm.dirty_background_bytes=100000000" >> /etc/sysctl.conf
-
-- name: Disable unnecessary services
-  service: name="{{ item }}" state=stopped enabled=no
-  with_items:
-    - kdump
