--- a/http/ks.cfg
+++ b/http/ks.cfg
@@ -46,7 +46,7 @@ zerombr
 clearpart --all --initlabel
 
 # Automatically create partitions, no LVM
-autopart --type=plain
+autopart --type=lvm
 
 # Set up the authentication options for the system
 auth --enableshadow --passalgo=sha512
