--- a/http/ks.cfg
+++ b/http/ks.cfg
@@ -34,7 +34,7 @@ rootpw vagrant
 firewall --disabled
 
 # SELinux switch
-selinux --permissive
+selinux --enforcing
 
 # System bootloader configuration
 bootloader --location=mbr --timeout=2
