--- a/ansible/roles/packer-rhel/tasks/main.yml
+++ b/ansible/roles/packer-rhel/tasks/main.yml
@@ -31,7 +31,7 @@
 
   # check if it's VirtualBox
   - name: Check if VirtualBox is running the guest VM.
-    command: dmidecode | grep "Product Name"
+    command: dmidecode -s system-product-name
     register: command_result
 
   # Install GuestAdditions
