removed qemu switch

--- a/ansible/roles/packer-rhel/tasks/main.yml
+++ b/ansible/roles/packer-rhel/tasks/main.yml
@@ -29,18 +29,8 @@
       - yum-utils
       - zlib-devel
 
-  # check if it's VirtualBox
-  - name: Check if VirtualBox of QEMU
-    command: sudo dmidecode | egrep -i 'vendor'
-    register: command_result
-
-  - name: check result dmidecode |
-    debug: msg="{{ command_result.stdout }}"
-
-  # Install GuestAdditions (ignore errors for qemu)
+  # Install GuestAdditions
   - include: vboxguestadditions.yml
-    when: not "'QEMU' in command_result.stdout"
-    ignore_errors: yes
 
   # Fixes
   - name: Fix slow DNS (adapted from Bento).
