--- a/ansible/roles/packer-rhel/tasks/vboxguestadditions.yml
+++ b/ansible/roles/packer-rhel/tasks/vboxguestadditions.yml
@@ -1,6 +1,6 @@
 ---
   - name: Get VirtualBox version.
-    shell: cat /home/vagrant/.vbox_version
+    command: cat /home/vagrant/.vbox_version
     register: virtualbox_version
 
   - name: Mount VirtualBox guest additions ISO.
@@ -12,7 +12,7 @@
       fstype: iso9660
 
   - name: Run VirtualBox guest additions installation.
-    shell: sh /tmp/vbox/VBoxLinuxAdditions.run
+    command: sh /tmp/vbox/VBoxLinuxAdditions.run
     failed_when: false
 
   - name: Unmount VirtualBox guest additions ISO.
