Switched default SELinux to permissive to allow more easy testing of various software packages

--- a/http/ks.cfg
+++ b/http/ks.cfg
@@ -34,7 +34,7 @@ rootpw vagrant
 firewall --disabled
 
 # SELinux switch
-selinux --enforcing
+selinux --permissive
 
 # System bootloader configuration
 bootloader --location=mbr --timeout=2
