--- a/http/ks.cfg
+++ b/http/ks.cfg
@@ -71,6 +71,10 @@ reboot
 
 %post
 
+# Temporary install Ansible
+yum install -y epel-release
+yum install -y ansible
+
 # Do a full update
 echo "Updating packages"
 yum update -y
