--- a/ansible/roles/packer-centos/meta/main.yml
+++ b/ansible/roles/packer-centos/meta/main.yml
@@ -3,9 +3,9 @@ dependencies: []
 
 galaxy_info:
   author: scorputty
-  description: RedHat/CentOS configuration for Packer.
+  description: CentOS configuration for Packer.
   company: "N/A"
-  license: "license (BSD, MIT)"
+  license: "license MIT"
   min_ansible_version: 2.0
   platforms:
     - name: EL
