--- a/ansible/roles/packer-centos/tasks/main.yml
+++ b/ansible/roles/packer-centos/tasks/main.yml
@@ -156,8 +156,8 @@
       - "b43-openfwwf"
       - "plymouth*"
 
-  - name: Remove surplus kernels
-    command: package-cleanup -y --oldkernels --count=1
+  # - name: Remove surplus kernels
+  #   command: package-cleanup -y --oldkernels --count=1
 
   - name: Clean up yum.
     command: yum clean all
